turtleart.circleying.CircleYing.scala.error
Erreur de compilation :
CircleYing:15: error: Unmatched closing brace '}' ignored here
}
^